--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -583,6 +583,28 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 3
+- name: ci-knative-sandbox-operator-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-operator-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-sandbox-operator-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-operator-nightly-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-operator-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-operator-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-operator-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-operator-auto-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 1
+- name: ci-knative-sandbox-operator-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-operator-test-coverage
+  short_text_metric: "coverage"
 dashboards:
 - name: serving
   dashboard_tab:
@@ -995,6 +1017,35 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-net-kourier-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: sandbox-operator
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-sandbox-operator-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-sandbox-operator-nightly-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: dot-release
+    test_group_name: ci-knative-sandbox-operator-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-sandbox-operator-auto-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-sandbox-operator-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-group=&sort-by-name="
 - name: knative-gcp
   dashboard_tab:
   - name: continuous
@@ -1291,6 +1342,9 @@ dashboard_groups:
   - "net-http01"
   - "net-istio"
   - "net-kourier"
+- name: knative-sandbox
+  dashboard_names:
+  - "sandbox-operator"
 - name: google
   dashboard_names:
   - "knative-gcp"
