--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -17,8 +17,7 @@ required = [
 
 [[override]]
   name = "knative.dev/pkg"
-  source = "github.com/chizhg/pkg"
-  branch = "fix-prow-cluster-management"
+  branch = "master"
 
 # TODO(mattmoor): Find a way to bundle the licenseclassifier's
 # license database, so folks don't have to go get it.
